syntax = "proto3";

package astria.protocol.fees.v1;

import "astria/primitive/v1/uint128.proto";

message TransferFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message RollupDataSubmissionFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message InitBridgeAccountFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message BridgeLockFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message BridgeUnlockFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message BridgeSudoChangeFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message BridgeTransferFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message Ics20WithdrawalFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message IbcRelayFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message ValidatorUpdateFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message FeeAssetChangeFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message FeeChangeFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message IbcRelayerChangeFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message SudoAddressChangeFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}

message IbcSudoChangeFeeComponents {
  astria.primitive.v1.Uint128 base = 1;
  astria.primitive.v1.Uint128 multiplier = 2;
}
